PNG-5 Twig Data Handling with data for pages, layouts, comp and default Comp data

--- a/src/pages/Home/home.twig
+++ b/src/pages/Home/home.twig
@@ -1,6 +1,6 @@
-{% extends "../../layouts/base.twig" %}
+{% set layoutPath = '../../layouts/' ~ config.layout|capitalize ~ '/' ~ config.layout ~ '.twig' %}
+{% extends layoutPath %}
 
 {% block content %}
-  <p>{{exampleText}}</p>
-  <button>{{buttonLabel}}</button>
+  {% include '../../components/Header/header.twig' with header %}
 {% endblock %}
