Fixed capitalise in twig and added todo comments

--- a/config/scaffold/page/page.twig
+++ b/config/scaffold/page/page.twig
@@ -1,4 +1,4 @@
-{% set layoutPath = '../../layouts/' ~ config.layout|capitalize ~ '/' ~ config.layout ~ '.twig' %}
+{% set layoutPath = '../../layouts/' ~ config.layout|ucFirst ~ '/' ~ config.layout ~ '.twig' %}
 {% extends layoutPath %}
 
 {% block content %}
