--- a/src/pages/Home/home.twig
+++ b/src/pages/Home/home.twig
@@ -1,4 +1,4 @@
-{% set layoutPath = '../../layouts/' ~ config.layout|capitalize ~ '/' ~ config.layout ~ '.twig' %}
+{% set layoutPath = '../../layouts/' ~ config.layout|ucFirst ~ '/' ~ config.layout ~ '.twig' %}
 {% extends layoutPath %}
 
 {% block content %}
