--- a/src/layouts/Base/base.twig
+++ b/src/layouts/Base/base.twig
@@ -7,6 +7,7 @@
     <link rel="manifest" href="assets/images/favicon/manifest.json">
     <link rel="mask-icon" href="assets/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     {% block content %}{% endblock %}
