PNG-9 fix stylelint/eslint errors

--- a/src/layouts/Base/base.twig
+++ b/src/layouts/Base/base.twig
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Layout</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     {% block content %}{% endblock %}
