Added insert handling into existing files for js and sass files

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,4 +1,19 @@
+/**
+ * LAYOUTS
+ */
+//LAYOUT_PLACEHOLDER
+
+/**
+ * COMPONENTS
+ */
 @import '../../components/Header/header';
+@import '../../components/House/house';
+//COMPONENT_PLACEHOLDER
+
+/**
+ * PAGES
+ */
+//PAGE_PLACEHOLDER
 
 body {
   color: #fff;
