Added first remove handling

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,20 +1,21 @@
 /**
  * LAYOUTS
  */
-//LAYOUT_PLACEHOLDER
+/* LAYOUT_PLACEHOLDER */
 
 /**
  * COMPONENTS
  */
 @import '../../components/Header/header';
 @import '../../components/House/house';
-//COMPONENT_PLACEHOLDER
+/* COMPONENT_PLACEHOLDER */
 
 /**
  * PAGES
  */
-//PAGE_PLACEHOLDER
+/* PAGE_PLACEHOLDER */
 
 body {
   color: #fff;
 }
+
