PNG-25 edit base files to get gulp working again

--- a/src/pages/Home/home.twig
+++ b/src/pages/Home/home.twig
@@ -2,5 +2,5 @@
 {% extends layoutPath %}
 
 {% block content %}
-  {% include '../../components/Header/header.twig' with header %}
+  Hello this is home.
 {% endblock %}
