--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -6,7 +6,7 @@
 /**
  * COMPONENTS
  */
-@import '../../components/Header/header';
+
 /* COMPONENT_PLACEHOLDER */
 
 /**
@@ -15,6 +15,6 @@
 /* PAGE_PLACEHOLDER */
 
 body {
-  color: #fff;
+  color: #000;
 }
 
