Added prism.js and code blocks

--- a/src/preview/component.twig
+++ b/src/preview/component.twig
@@ -17,4 +17,22 @@
     </p>
   </div>
 
+  <div class="pew_block">
+    <ul>
+      <li>
+        <pre><code class="language-html">{{ code.twig }}</code></pre>
+      </li>
+      <li>
+        <pre><code class="language-js">{{ code.js }}</code></pre>
+      </li>
+      <li>
+        <pre><code class="language-scss">{{ code.scss }}</code></pre>
+      </li>
+    </ul>
+  </div>
+
+  <div class="pew_block">
+    <pre><code class="language-yaml">{{ code.yaml }}</code></pre>
+  </div>
+
 {% endblock %}
