--- a/config/scaffold/component/component.twig
+++ b/config/scaffold/component/component.twig
@@ -1,3 +1,3 @@
-<div class="{% CLASS_NAME %}" data-pingu="{{config.name}}">
+<div class="{% CLASS_NAME %}" data-pingu="{{config.name}}" data-{% CLASS_NAME %}-options='{{options}}'>
 
 </div>
