Added isDev to gulp.twig.process

--- a/src/preview/layout.twig
+++ b/src/preview/layout.twig
@@ -1,4 +1,4 @@
-<html>
+<html class="{% if isDev %}dev{% endif %}">
   <head>
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="/preview/assets/css/pew.css">
