Added checking of html class "dev"?

--- a/src/layouts/Base/base.twig
+++ b/src/layouts/Base/base.twig
@@ -1,4 +1,4 @@
-<html>
+<html class="{% if isDev %}dev{% endif %}">
   <head>
     <title>Layout</title>
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
