PNG-35 add first version of the styleguide

--- a/src/preview/layout.twig
+++ b/src/preview/layout.twig
@@ -2,6 +2,7 @@
   <head>
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="/preview/assets/css/pew.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
     <script src="/preview/assets/js/pew.bundle.js"></script>
     {% block component_scripts %}{% endblock %}
   </head>
