Basic integration of a demo accordion, yet without animations or css styles

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,4 +1,9 @@
 /**
+ * UTILS
+ */
+@import 'utils/colors';
+
+/**
  * LAYOUTS
  */
 /* LAYOUT_PLACEHOLDER */
@@ -7,7 +12,7 @@
  * COMPONENTS
  */
 
-@import '../../components/Header/header';
+@import '../../components/Accordion/accordion';
 /* COMPONENT_PLACEHOLDER */
 
 /**
