--- a/src/pages/Home/home.twig
+++ b/src/pages/Home/home.twig
@@ -4,5 +4,5 @@
 {% block content %}
   Hello this is home.
 
-  {% include '../../components/Header/header.twig' with header %}
+  {% include '../../components/Accordion/accordion.twig' with accordion %}
 {% endblock %}
