--- a/src/components/Accordion/accordion.twig
+++ b/src/components/Accordion/accordion.twig
@@ -17,7 +17,7 @@
         aria-hidden="true"
         aria-labelledby="{{ uid }}-trigger-{{key}}"
       >
-        <span class="accordion__panel-content">{{ item.content }}</span>
+        <div class="accordion__panel-content">{{ item.content }}</div>
       </div>
     </li>
   {% endfor %}
