--- a/src/preview/assets/css/main.scss
+++ b/src/preview/assets/css/main.scss
@@ -1,9 +1,40 @@
+@import '../fonts/overpass/overpass.css';
 @import '~prismjs/themes/prism-okaidia.css';
 @import '~prismjs/plugins/toolbar/prism-toolbar.css';
+
+$color--brand: #f47f4e;
+$color--text: #303030;
+
+$sidebar--link-color: #87cddd;
+$sidebar--link-color-active: #fff;
+$sidebar--background: #333;
+
+$font-weight--light: 400;
+$font-weight--regular: 500;
+$font-weight--bold: 700;
+
+$font-size--title: 2.667rem;
+
+$paragraph--base: 1.111rem; // 20px
+$paragraph--half: $paragraph--base / 2; // 10px
+$paragraph--double: $paragraph--base * 2; // 40px
+
+$spacing--base: 1.333rem; // 24px
+$spacing--half: $spacing--base / 2; // 12px
+$spacing--double: $spacing--base * 2; // 48px
 
 /**
  * LAYOUT
  */
+
+html {
+  font-size: 18px;
+  font-family: overpass;
+  font-weight: $font-weight--light;
+  line-height: 1.25;
+
+  -webkit-font-smoothing: antialiased;
+}
 
 body {
   margin: 0;
@@ -11,21 +42,196 @@ body {
 
 .pew_main {
   display: flex;
+
+  a {
+    text-decoration: none;
+    font-weight: $font-weight--regular;
+  }
 }
 
 .pew_sidebar {
-  width: 250px;
+  display: flex;
+  flex-direction: column;
+
+  background-color: $sidebar--background;
+  font-weight: $font-weight--regular;
   height: 100vh;
-  background-color: #000;
+  overflow: hidden;
+  width: 250px;
+
+  transition: width 650ms cubic-bezier(0.52, 0.01, 0.16, 1);
+
+  transform: translate3d(0);
+
+  &__image {
+    width: 100%;
+  }
+
+  &__navigation {
+    flex: 1;
+    display: flex;
+    padding: $spacing--base 0;
+  }
+
+  &__list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  &__text {
+    transition: 333ms ease;
+    transition-property: opacity, transform;
+  }
+
+  &__icon {
+    fill: $sidebar--link-color;
+    transition: 350ms ease;
+    transition-property: fill;
+    margin-right: $paragraph--base;
+  }
+
+  &__link {
+    display: flex;
+    font-size: 1.333rem; // 24px
+    color: $sidebar--link-color;
+    padding: $paragraph--half $spacing--base;
+    box-shadow: inset 0 0 0 0 $sidebar--link-color;
+
+
+    transition: color 333ms ease, box-shadow 333ms cubic-bezier(0.52, 0.01, 0.16, 1);
+  }
+
+  &__item--active {
+
+    .pew_sidebar__icon {
+      fill: $sidebar--link-color-active;
+    }
+
+    .pew_sidebar__link {
+      color: $sidebar--link-color-active;
+      box-shadow: inset 4px 0 0 0 $sidebar--link-color;
+      transition: color 333ms ease, box-shadow 333ms 333ms cubic-bezier(0.52, 0.01, 0.16, 1);
+    }
+  }
+
+  &__link:hover {
+    color: $sidebar--link-color-active;
+
+    .pew_sidebar__icon {
+      fill: $sidebar--link-color-active;
+    }
+  }
+
+  &__collapse {
+    align-self: flex-end;
+
+    display: flex;
+    justify-content: flex-end;
+
+    background: none;
+    border: none;
+    padding: $paragraph--base;
+    outline: none;
+    cursor: pointer;
+
+    &-icon {
+      fill: $sidebar--link-color;
+      transform: scale(-1);
+      transition: 350ms ease;
+      transition-property: fill, transform;
+    }
+  }
+
+  &__collapse:hover {
+
+    &-icon {
+      fill: $sidebar--link-color-active;
+    }
+  }
+
+  &--collapsed {
+    width: 70px;
+
+    .pew_sidebar__navigation {
+      align-items: flex-start;
+    }
+
+    .pew_sidebar__text {
+      opacity: 0;
+      transform: translateX(1rem);
+    }
+
+    .pew_sidebar__collapse-icon {
+      transform: scale(1);
+    }
+  }
+
+  &--no-transitions {
+    transition: none;
+
+    .pew_sidebar__collapse-icon {
+      transition: none;
+    }
+  }
 }
 
 .pew_content {
   width: calc(100% - 250px);
+  padding: $spacing--double $paragraph--double;
+
+  &__item {
+    opacity: 0;
+    height: 0;
+    visibility: hidden;
+
+    transform: translateX(1rem);
+    transition: opacity 0ms, transform 0ms;
+
+    &--shown {
+      opacity: 1;
+      height: auto;
+      visibility: visible;
+      transform: translateX(0);
+      transition: opacity 1s ease, transform 1s ease;
+    }
+  }
 }
 
 /**
  * COMPONENTS
  */
+
+.pew_title {
+  font-size: $font-size--title;
+  font-weight: $font-weight--regular;
+
+  margin: 0 0 $spacing--double;
+
+  &__project {
+    font-weight: $font-weight--bold;
+    text-transform: uppercase;
+  }
+
+  &__seperator {
+    color: $color--brand;
+  }
+
+  &__site {
+
+    &-title {
+      display: inline-block;
+      transform: translateX(0.75rem);
+      opacity: 0;
+
+      &--shown {
+        transform: translateX(0);
+        opacity: 1;
+        transition: opacity 950ms ease, transform 950ms ease;
+      }
+    }
+  }
+}
 
 .pew_table {
   width: 100%;
